--- a/HTML/About.html
+++ b/HTML/About.html
@@ -3,7 +3,7 @@
     <head>  
         <meta charset="UTF-8">  
         <meta name="viewport" content="width=device-width">  
-        <link rel="stylesheet" href="/Sunset-GT-/CSS/contact.css" type="text/css">  
+        <link rel="stylesheet" href="/Sunset-GT-/CSS/about.css" type="text/css">  
         <title>Sunset-GT</title>  
     </head>  
     <body> 
@@ -15,7 +15,6 @@
         <div class="navbar" id="jsnavbar">
             <a href="/Sunset-GT-/HTML/Index.html" class="active">Home</a>
             <a href="/Sunset-GT-/HTML/UpcomingEvents.html">Upcoming events</a>
-            <a href="/Sunset-GT-/HTML/PastEvents.html">Past events</a>
             <a href="/Sunset-GT-/HTML/Contact.html">Contact</a>
             <a href="/Sunset-GT-/HTML/About.html">About Us</a>
             <a href="javascript:void(0);" class="icon" onclick="jsfunction()">
@@ -23,7 +22,8 @@
             </a>
         </div>
         
-        <h1>about</h1>
+        <h1>About us</h1>
+        <p>Sunset-GT is a family friendly supercar event that takes place every Friday and starts at 9:00AM-11:59AM. Sunset GT is a great event for anyone who has a passion for cars.  </p>
         
         <script>
             function jsfunction() {
